[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/audio/music.mp3" type="AudioStream" id=1]
[ext_resource path="res://scenes/audio.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/button.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/element_done.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/element_new.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/tick.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/level_accomplished.mp3" type="AudioStream" id=7]

[node name="Audio" type="Node"]
script = ExtResource( 2 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
autoplay = true
bus = "Music"

[node name="ButtonClickPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "FX"

[node name="ElementNewPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "FX"

[node name="ElementDonePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "FX"

[node name="TickPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "FX"

[node name="MatchedPlayer" type="AudioStreamPlayer" parent="."]
bus = "FX"

[node name="LevelAccomplishedPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "FX"
